--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./public/css/style.css">
+    <title>Proyecto 01: HTML-CSS</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg sticky-top">
+        <div class="container">
+            <a class="navbar-brand logo-nav" href="#">
+                <i class="bi bi-geo-alt-fill"></i>
+                <span>Portal-Grupo12</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+                aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end " id="navbarToggler">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-nav" href="#"><i class="bi bi-house-fill"></i></i> Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-nav" href="./sitios.html"><i class="bi bi-map-fill"></i> Sitios</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main>
+        <section>
+            <div class="container col-xxl-8 mt-5">
+                <div class="row flex-lg-rom-reverse align-items-center g-5 py-5">
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <img src="./public/img/img-jujuy.jpg" alt="imagen de jujuy" class="d-block mx-lg-auto img-fluid"
+                            width="700" height="500" loading="lazy">
+                    </div>
+                    <div class="col-lg-6">
+                        <h1 class="display-5 fw-bold lh-1 mb-4">
+                            Atracciones destacadas de la provincia de Jujuy
+                        </h1>
+                        <p class="lead">
+                            Jujuy, provincia del remoto noroeste de Argentina, se caracteriza por sus espectaculares
+                            formaciones rocosas y colinas de la Quebrada de Huamahuaca. Este valle y sus aldeas quechuas
+                            se ubican en el norte de la capital provincial y el acceso regional, San Salvador de Jujuy.
+                            En el sur del valle, las laderas rocosas del icónico Cerro de los Siete Colores sobresalen
+                            de la villa colonial Purmamarca.
+                        </p>
+                    </div>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mt-5">
+                        <button type="button" class="btn btn-primaty btn-lg px-4 me-md-2">
+                            <a class="boton-sitios-interes" href="./sitios.html">Sitios de interes <i class="bi bi-search"></i></a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
