--- a/sitios.html
+++ b/sitios.html
@@ -36,8 +36,33 @@
         </div>
     </nav>
     <main>
-        <section>
-            
+        <section id="about-ud" class="feature">
+            <div class="container pt-5">
+                <h2 class="title text-center mt-5 mb-5">Lugares recomendados!</h2>
+                <p class="lead text-center mb-5">
+                    podés asombrarte con fascinantes paisajes típicos de la provincia, más allá de la Quebrada de
+                    Huamahuaca.
+                </p>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="card">
+                            <img src="./public/img/img-1.jpg" class="img card-img-top" alt="...">
+                            <span class="badge text-bg-danger"><i class="bi bi-star-fill"></i> 4.8/5</span>
+                            <div class="card-body text-center p-5">
+                                <p>
+                                    <span class="badge rounded-pill text-bg-primary">religioso</span>
+                                    <span class="badge rounded-pill text-bg-success">lugar de interes</span>
+                                    <span class="badge rounded-pill text-bg-info">monumento</span>
+                                    <span class="badge rounded-pill text-bg-info">fotografias</span>
+                                </p>
+                              <h3 class="title card-title">Iglesia de Santa Rosa de Lima</h5>
+                              <p class="card-text">Iglesia ubicada frente a la plaza principal de Purmamarca. Data de 1648 y se encuentra muy bien conservada. Merece una...</p>
+                              <a href="#" class="btn btn-primary">ver mas</a>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
