--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse justify-content-end " id="navbarToggler">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-nav" href="#"><i class="bi bi-house-fill"></i></i> Inicio</a>
+                        <a class="nav-link text-nav" href="#"><i class="bi bi-house-door"></i> Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-nav" href="./sitios.html"><i class="bi bi-map-fill"></i> Sitios</a>
+                        <a class="nav-link text-nav" href="./sitios.html"><i class="bi bi-pin-map-fill"></i> Sitios</a>
                     </li>
                 </ul>
             </div>
@@ -57,13 +57,45 @@
                     </div>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mt-5">
                         <button type="button" class="btn btn-primaty btn-lg px-4 me-md-2">
-                            <a class="boton-sitios-interes" href="./sitios.html">Sitios de interes <i class="bi bi-search"></i></a>
+                            <a class="boton-sitios-interes" href="./sitios.html">Sitios de interes <i
+                                    class="bi bi-search"></i></a>
                         </button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="page-footer p-5 text-md-left">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <h5 class="footer-title title text-uppercase font-weight-bold mg-4">Fundamentos de Programacion Web
+                    </h5>
+                    <p class="footer-text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa magni
+                        vitae possimus, dicta omnis vero minima excepturi nihil temporibus magnam perferendis vel eaque,
+                        minus iusto culpa suscipit distinctio quas earum commodi consequuntur reiciendis. Nam, nihil?
+                        Laborum expedita molestias numquam?</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <h5 class="footer-title title text-uppercase font-weight-bold mb-4">Contacto</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-facebook"></i> Facebook</a></li>
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-youtube"></i> Youtube</a></li>
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-instagram"></i> Instagram</a></li>
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-discord"></i> Discord</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <h5 class="footer-title title text-uppercase font-weight-bold mb-4">Pagina Principal</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1"><a href="./index.html" class="footer-link"><i class="bi bi-box-arrow-right"></i> Pagina Inicio</a></li>
+                        <li class="mb-1"><a href="./sitios.html" class="footer-link"><i class="bi bi-box-arrow-right"></i> Pagina Sitios</a></li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
