--- a/sitios.html
+++ b/sitios.html
@@ -26,20 +26,20 @@
             <div class="collapse navbar-collapse justify-content-end " id="navbarToggler">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-nav" href="./index.html"><i class="bi bi-house-fill"></i></i> Inicio</a>
+                        <a class="nav-link text-nav" href="./index.html"><i class="bi bi-house-door"></i> Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-nav" href="#"><i class="bi bi-map-fill"></i> Sitios</a>
+                        <a class="nav-link text-nav" href="#"><i class="bi bi-pin-map-fill"></i> Sitios</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <main>
-        <section id="about-ud" class="feature">
+        <section id="about-ud" class="contenedor-main">
             <div class="container pt-5">
-                <h2 class="title text-center mt-5 mb-5">Lugares recomendados!</h2>
-                <p class="lead text-center mb-5">
+                <h2 id="titulo-sitios" class="title titulo-1 text-center mt-5 mb-5">Lugares recomendados!</h2>
+                <p class="lead texto-1 text-center mb-5">
                     podés asombrarte con fascinantes paisajes típicos de la provincia, más allá de la Quebrada de
                     Huamahuaca.
                 </p>
@@ -47,24 +47,153 @@
                     <div class="col-md-6 col-lg-4 mb-3">
                         <div class="card">
                             <img src="./public/img/img-1.jpg" class="img card-img-top" alt="...">
-                            <span class="badge text-bg-danger"><i class="bi bi-star-fill"></i> 4.8/5</span>
+                            <span class="badge text-bg-danger valoracion"><i class="bi bi-star-fill"></i> 4.8/5</span>
                             <div class="card-body text-center p-5">
                                 <p>
-                                    <span class="badge rounded-pill text-bg-primary">religioso</span>
-                                    <span class="badge rounded-pill text-bg-success">lugar de interes</span>
-                                    <span class="badge rounded-pill text-bg-info">monumento</span>
-                                    <span class="badge rounded-pill text-bg-info">fotografias</span>
+                                    <span class="card-badge badge rounded-pill text-bg-primary">religioso</span>
+                                    <span class="card-badge badge rounded-pill text-bg-success">lugar de interes</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">monumento</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">fotografias</span>
                                 </p>
-                              <h3 class="title card-title">Iglesia de Santa Rosa de Lima</h5>
-                              <p class="card-text">Iglesia ubicada frente a la plaza principal de Purmamarca. Data de 1648 y se encuentra muy bien conservada. Merece una...</p>
-                              <a href="#" class="btn btn-primary">ver mas</a>
+                                <h3 class="title card-title">Iglesia de Santa Rosa de Lima</h5>
+                                    <p class="card-text">Iglesia ubicada frente a la plaza principal de Purmamarca. Data
+                                        de 1648 y se encuentra muy bien conservada. Merece una...</p>
+                                    <a href="#" class="btn btn-tarjeta btn-primary">ver mas</a>
                             </div>
-                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="card">
+                            <img src="./public/img/img-2.jpg" class="img card-img-top" alt="...">
+                            <span class="badge text-bg-danger valoracion"><i class="bi bi-star-fill"></i> 4.9/5</span>
+                            <div class="card-body text-center p-5">
+                                <p>
+                                    <span class="card-badge badge rounded-pill text-bg-primary">ancestral</span>
+                                    <span class="card-badge badge rounded-pill text-bg-success">lugar de interes</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">monumento</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">fotografias</span>
+                                </p>
+                                <h3 class="title card-title">Pucará de Tilcara</h5>
+                                    <p class="card-text">El Pucará de Tilcara es un sitio arqueológico formado por
+                                        numerosas construcciones realizadas por los tilcaras, una parcialidad de los
+                                        omaguacas, en un punto estratégico sobre la Quebrada de Humahuaca.</p>
+                                    <a href="#" class="btn btn-tarjeta btn-primary">ver mas</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="card">
+                            <img src="./public/img/img-3.jpg" class="img card-img-top" alt="...">
+                            <span class="badge text-bg-danger valoracion"><i class="bi bi-star-fill"></i> 4.5/5</span>
+                            <div class="card-body text-center p-5">
+                                <p>
+                                    <span class="card-badge badge rounded-pill text-bg-primary">Independencia</span>
+                                    <span class="card-badge badge rounded-pill text-bg-success">lugar de interes</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">monumento</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">Humahuaca</span>
+                                </p>
+                                <h3 class="title card-title">Monumento a los Heroes de la Independencia</h5>
+                                    <p class="card-text">El Monumento a Héroes de la Independencia es un imponente grupo
+                                        escultórico ubicado en la ciudad de Humahuaca, en la provincia de Jujuy, en el
+                                        norte de la Argentina.</p>
+                                    <a href="#" class="btn btn-tarjeta btn-primary">ver mas</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="card">
+                            <img src="./public/img/img-4.jpg" class="img card-img-top" alt="...">
+                            <span class="badge text-bg-danger valoracion"><i class="bi bi-star-fill"></i> 4.0/5</span>
+                            <div class="card-body text-center p-5">
+                                <p>
+                                    <span class="card-badge badge rounded-pill text-bg-primary">Palacio</span>
+                                    <span class="card-badge badge rounded-pill text-bg-success">Gobierno</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">1907</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">fotografias</span>
+                                </p>
+                                <h3 class="title card-title">Casa de Gobierno de Jujuy</h5>
+                                    <p class="card-text">El Palacio de Gobierno de Jujuy es la sede del Gobierno de la
+                                        Provincia de Jujuy. Se encuentra en la ciudad capital, San Salvador de Jujuy y
+                                        fue inaugurado en 1921.</p>
+                                    <a href="#" class="btn btn-tarjeta btn-primary">ver mas</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="card">
+                            <img src="./public/img/img-5.jpg" class="img card-img-top" alt="...">
+                            <span class="badge text-bg-danger valoracion"><i class="bi bi-star-fill"></i> 4.7/5</span>
+                            <div class="card-body text-center p-5">
+                                <p>
+                                    <span class="card-badge badge rounded-pill text-bg-primary">altitud</span>
+                                    <span class="card-badge badge rounded-pill text-bg-success">lugar de interes</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">Andes</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">fotografias</span>
+                                </p>
+                                <h3 class="title card-title">Cuesta de Lipan</h5>
+                                    <p class="card-text">La cuesta del Lipán corresponde a un tramo zigzagueante y
+                                        empinado de la Ruta Nacional 52, ubicada en el departamento de Tumbaya,
+                                        Provincia de Jujuy, República Argentina</p>
+                                    <a href="#" class="btn btn-tarjeta btn-primary">ver mas</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="card">
+                            <img src="./public/img/img-6.jpg" class="img card-img-top" alt="...">
+                            <span class="badge text-bg-danger valoracion"><i class="bi bi-star-fill"></i> 4.9/5</span>
+                            <div class="card-body text-center p-5">
+                                <p>
+                                    <span class="card-badge badge rounded-pill text-bg-primary">Patrimonio</span>
+                                    <span class="card-badge badge rounded-pill text-bg-success">cerro</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">Andes</span>
+                                    <span class="card-badge badge rounded-pill text-bg-info">fotografias</span>
+                                </p>
+                                <h3 class="title card-title">Cerro de los Siete Colores</h5>
+                                    <p class="card-text">El Macizo de los Siete Colores es un cerro ubicado en las
+                                        afueras de la ciudad de Purmamarca sobre la Ruta Nacional 52 que se dirige al
+                                        Paso de Jama, a 4 kilómetros de la Ruta Nacional 9 en la provincia de Jujuy.
+                                    </p>
+                                    <a href="#" class="btn btn-tarjeta btn-primary">ver mas</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="page-footer p-5 text-md-left">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <h5 class="footer-title title text-uppercase font-weight-bold mg-4">Fundamentos de Programacion Web
+                    </h5>
+                    <p class="footer-text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa magni
+                        vitae possimus, dicta omnis vero minima excepturi nihil temporibus magnam perferendis vel eaque,
+                        minus iusto culpa suscipit distinctio quas earum commodi consequuntur reiciendis. Nam, nihil?
+                        Laborum expedita molestias numquam?</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <h5 class="footer-title title text-uppercase font-weight-bold mb-4">Contacto</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-facebook"></i> Facebook</a></li>
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-youtube"></i> Youtube</a></li>
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-instagram"></i> Instagram</a></li>
+                        <li class="mb-1"><a href="#" class="footer-link"><i class="bi bi-discord"></i> Discord</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <h5 class="footer-title title text-uppercase font-weight-bold mb-4">Pagina Principal</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-1"><a href="./index.html" class="footer-link"><i class="bi bi-box-arrow-right"></i> Pagina Inicio</a></li>
+                        <li class="mb-1"><a href="./sitios.html" class="footer-link"><i class="bi bi-box-arrow-right"></i> Pagina Sitios</a></li>
+                        <li class="mb-1"><a href="#titulo-sitios" class="footer-link"><i class="bi bi-box-arrow-right"></i> ir arriba</a></li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
